--- a/src/app/shared/components/nav-aside/nav-aside.component.html
+++ b/src/app/shared/components/nav-aside/nav-aside.component.html
@@ -1,3 +1,3 @@
-<aside>
-	<button type="button">{{collapseBtnText}}</button>
+<aside class="aside-menu-container">
+	<button type="button" (click)="toggleAsideMenu()">{{collapseBtnText}}</button>
 </aside>
