--- a/src/assets/scss/layout/_menu.scss
+++ b/src/assets/scss/layout/_menu.scss
@@ -1,1 +1,14 @@
 // Style all the menus
+
+.aside-menu-container {
+    position: fixed;
+    top:0;
+    bottom: 0;
+
+    // TODO: use a function and a variable to customize aside menu position to right or left
+    right: 0;
+
+    width: 50px;
+    background-color: $gallery;
+    box-shadow: 0px 1px 7px 1px rgba(0,0,0,0.2);
+}
