aside menu basic styling

--- a/src/app/shared/components/nav-aside/nav-aside.component.html
+++ b/src/app/shared/components/nav-aside/nav-aside.component.html
@@ -1,5 +1,6 @@
-<aside class="aside-menu-container">
-	<button type="button" (click)="toggleAsideMenu()">
-		<i [ngClass]="[ collapseMenu ? 'fa fa-angle-double-right' : 'fa fa-angle-double-left' ]"></i>
+<aside class="aside-menu-container" 
+	[ngClass]="{ 'aside-menu-expand' : expandMenu ,  'aside-menu-collapse' : !expandMenu  }">
+	<button class="icon-btn aside-menu-expand-btn" type="button" (click)="toggleAsideMenu()">
+		<i class="fa " [ngClass]="{ 'fa-angle-double-right' : expandMenu ,  'fa-angle-double-left' : !expandMenu  }"></i>
 	</button>
 </aside>
