--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@
 @import './assets/scss/layout/_menu';
 @import './assets/scss/layout/_forms';
 @import './assets/scss/layout/_tables';
+@import './assets/scss/layout/_zindex';
 
 // Components
 @import './assets/scss/components/_buttons';
