--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -366,3 +366,12 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
+
+
+
+// Reste Override
+a {
+    &:hover {
+        cursor: pointer;
+    }
+}
