--- a/src/assets/scss/layout/_zindex.scss
+++ b/src/assets/scss/layout/_zindex.scss
@@ -1,8 +1,8 @@
 // All z-index changes should be made here
 
-.nav-menu-container {
+nav {
     z-index: 200;
 }
-.aside-menu-container {
+aside {
     z-index: 100;
 }
