--- a/src/assets/scss/layout/_menu.scss
+++ b/src/assets/scss/layout/_menu.scss
@@ -1,26 +1,50 @@
 // Style all the menus
 
-.aside-menu-container {
-    position: fixed;
+
+// Nav
+nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 50px;
+    padding: 5px 20px;
+    background-color: $white;
+    box-shadow: 0px 1px 7px 1px rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .nav-brand {
+        text-transform: uppercase;       
+    }
+    .nav-menu-items {
+        display: flex;
+        align-items: center;
+    }
+}
+
+// Aside
+aside {
+    position: absolute;
     top:0;
     bottom: 0;
-
     // TODO: use a function and a variable to customize aside menu position to right or left
     right: 0;
-
     background-color: $gallery;
-    box-shadow: 0px 1px 7px 1px rgba(0,0,0,0.2);
+    border-left: 1px $mercury;
     transition: width 0.1s;
-}
-.aside-menu-collapse {
-    width: 50px;
-}
-.aside-menu-expand {
-    width: 400px;
-}
-.aside-menu-expand-btn {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 10px;
+
+    &.aside-menu-collapse {
+        width: 50px;
+    }
+    &.aside-menu-expand {
+        width: 400px;
+    }
+    .aside-menu-expand-btn {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        margin: 10px;
+    }
 }
