--- a/src/app/shared/components/nav-top/nav-top.component.html
+++ b/src/app/shared/components/nav-top/nav-top.component.html
@@ -3,7 +3,7 @@
 		<h1>Lemon Pie</h1>
 	</a>
 	<ul class="nav-menu-items">
-		<li *ngIf="!username">
+		<li *ngIf="!username" [routerLink]="['/login']">
 			<a>Login</a>
 		</li>
 		<li *ngIf="username">
