--- a/src/assets/scss/abstracts/_classes.scss
+++ b/src/assets/scss/abstracts/_classes.scss
@@ -1,6 +1,10 @@
 // Reusable Classes
 
 
-.flex-wrapper {
-    display: flex;
+.page-content {
+    position: absolute;
+    top: 60px;
+    padding: 10px;
+    width: calc( 100vw - 20px );
+    min-height: calc( 100vh - 80px );
 }
