--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 
 <app-nav-aside *ngIf="isLoggedIn"></app-nav-aside>
 
-<router-outlet></router-outlet>
+<section class="page-content">
+    <router-outlet></router-outlet>
+</section>
