--- a/src/app/shared/components/nav-top/nav-top.component.html
+++ b/src/app/shared/components/nav-top/nav-top.component.html
@@ -1,6 +1,6 @@
 <nav>
 	<a class="nav-brand">
-		<h1>Lemon Pie</h1>
+		Lemon Pie
 	</a>
 	<ul class="nav-menu-items">
 		<li *ngIf="!username" [routerLink]="['/login']">
