--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -7,6 +7,15 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+h1 { font-size: 3em; }
+h2 { font-size: 2em; }
+h3 { font-size: 1.6em; }
+h4 { font-size: 1.2em; }
+h5 { font-size: 0.8em; }
+h6 { font-size: 0.6em; }
+
+p { font-size: 1em; }
+
 
 
 // Typography rules
