refactor components and modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<app-nav-top></app-nav-top>
+<app-nav></app-nav>
 
-<app-nav-aside *ngIf="isLoggedIn"></app-nav-aside>
-
-<section class="page-content">
+<div class="page-content">
     <router-outlet></router-outlet>
-</section>
+</div>
