--- a/src/assets/scss/layout/_menu.scss
+++ b/src/assets/scss/layout/_menu.scss
@@ -24,6 +24,22 @@ nav {
     }
 }
 
+.bubble-menu {
+    position: absolute;
+    top: 50px;
+    right: 30px;
+    border: 1px solid;
+    background-color: white;
+    padding: 20px;
+    
+    opacity: 0;
+    pointer-events: none;
+    &.visible {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
 // Aside
 aside {
     position: absolute;
