--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@
 @import './assets/scss/components/_buttons';
 @import './assets/scss/components/_dropdown';
 @import './assets/scss/components/_loader';
+@import './assets/scss/components/_logo';
 @import './assets/scss/components/_modal';
 
 // Vendors Extensions
