--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -1,5 +1,3 @@
-<p>
-  profile works!
-</p>
-<br><br><br><br><br><br><br><br>
-<h3>profile</h3>
+<h3>Account information: </h3>
+
+<h3>Active projects: </h3>
