--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -13,20 +13,24 @@ h1 {
 }
 h2 { 
     font-size: 2em; 
+    line-height: 1.3em;
 }
 h3 { 
     font-size: 1.6em; 
+    line-height: 1.3em;
 }
 h4 { 
     font-size: 1.2em; 
+    line-height: 1.3em;
 }
 h5 { 
     font-size: 0.8em;
+    line-height: 1.3em;
 }
 h6 { 
-    font-size: 0.6em; 
+    font-size: 0.6em;
+    line-height: 1.3em; 
 }
-
 p { 
     font-size: 1em;
     line-height: 1.3em;
