--- a/src/app/logon/login/login.component.html
+++ b/src/app/logon/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
+<form [formGroup]="loginForm" (ngSubmit)="firebaseLogin()" class="login-form">
 	<div class="form-group">
 		<label>Username</label>
 		<input type="text" formControlName="username">
