--- a/src/app/logon/register/register.component.html
+++ b/src/app/logon/register/register.component.html
@@ -1,3 +1,15 @@
-<p>
-  register works!
-</p>
+<form [formGroup]="registerForm" (ngSubmit)="register()" class="login-form">
+	<div class="form-group">
+		<label>Email</label>
+		<input type="text" formControlName="email">
+	</div>
+	<div class="form-group">
+		<label>Password</label>
+		<input type="password" formControlName="password">
+	</div>
+	<div class="form-group">
+		<label>Confirm password</label>
+		<input type="password" formControlName="confirmPassword">
+	</div>
+	<button type="submit" class="form-btn">Login</button>
+</form>
