fix minor errors

--- a/src/app/logon/login/login.component.html
+++ b/src/app/logon/login/login.component.html
@@ -11,4 +11,4 @@
 </form>
 
 
-<button type="button" (click)="currentUser()" class="form-btn">log user</button>
+<button type="button" (click)="currentUser()">log current user</button>
