--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -3,24 +3,20 @@
 		Lemon Pie
 	</a>
 	<ul class="nav-menu">
-		<li [routerLink]="['/home']" class="nav-item">
+		<!-- <li [routerLink]="['/home']" class="nav-item">
 			<a>Home</a>
-		</li>
+		</li> -->
 		<li *ngIf="!currentUser" [routerLink]="['/login']" class="nav-item">
 			<a>Login</a>
 		</li>
 		<li *ngIf="currentUser" (click)="toggleBubbleMenu()" class="nav-item">
-			<a> {{currentUser.email}} </a>
-		</li>
-		<li>
-			<a (click)="logCurrentUser()" class="nav-item">
-				[Log Current User]
-			</a>
+			<a>{{currentUser.email}}</a>
 		</li>
 	</ul>
 	<div class="bubble-menu" [ngClass]="{'visible':showBubbleMenu}">
 		<ul>
 			<li><a [routerLink]="['/profile']" (click)="toggleBubbleMenu()">Profile</a></li>
+			<li><a [routerLink]="['/editor']" (click)="toggleBubbleMenu()">Editor</a></li>
 			<li><a (click)="logout()">Logout</a></li>
 		</ul>
 	</div>
