add-project.component

--- a/src/app/shared/components/file-uploader/file-uploader.component.html
+++ b/src/app/shared/components/file-uploader/file-uploader.component.html
@@ -4,7 +4,7 @@
 	(dropped)="onDrop($event)" 
 	[class.hovering]="isHovering">
 
-	<h3>Drag and Drop Your Files here</h3>
+	<h4>Upload project files</h4>
 </div>
 
 <div *ngFor="let file of files">
