--- a/src/app/shared/components/add-project/add-project.component.html
+++ b/src/app/shared/components/add-project/add-project.component.html
@@ -4,9 +4,12 @@
 		<label>Project name</label>
 		<input type="text" formControlName="name">
 	</div>
-
-	<app-file-uploader></app-file-uploader>
+	<div class="form-group">
+		<label>Project description</label>
+		<input type="text" formControlName="description">
+	</div>
+	<button type="submit" [disabled]="!addProjectForm.valid">Create project</button>
 	
-	<button type="submit" class="" >Save</button>
-
 </form>
+
+<app-file-uploader></app-file-uploader>
