--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,7 @@
 @import './assets/scss/pages/_home';
 @import './assets/scss/pages/_contact';
 @import './assets/scss/pages/_user-profile';
+@import './assets/scss/pages/_library';
 
 // Themes
 @import './assets/scss/themes/_admin';
