style add-project.component

--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -12,3 +12,11 @@
     color: $white;
     padding: 10px;
 }
+
+.x-btn {
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	border: 1px $gallery solid; 
+	text-align: center;
+}
