--- a/src/app/shared/components/add-project/add-project.component.html
+++ b/src/app/shared/components/add-project/add-project.component.html
@@ -1,15 +1,24 @@
-<form [formGroup]="addProjectForm" (ngSubmit)="onSubmit()">
-
-	<div class="form-group">
-		<label>Project name</label>
-		<input type="text" formControlName="name">
+<div class="form-container">
+	<div class="x-btn" (click)="close()">
+		<i class="fa fa-close"></i>
 	</div>
-	<div class="form-group">
-		<label>Project description</label>
-		<input type="text" formControlName="description">
-	</div>
-	<button type="submit" [disabled]="!addProjectForm.valid">Create project</button>
-	
-</form>
 
-<app-file-uploader></app-file-uploader>
+	<h4>Create new project</h4>
+	<br>
+	<form [formGroup]="addProjectForm" (ngSubmit)="onSubmit()">
+
+		<div class="form-group">
+			<label>Project name</label>
+			<input type="text" formControlName="name">
+		</div>
+		<div class="form-group">
+			<label>Project description</label>
+			<input type="text" formControlName="description">
+		</div>
+		<button type="submit" [disabled]="!addProjectForm.valid">Create project</button>
+
+	</form>
+
+	<app-file-uploader></app-file-uploader>
+
+</div>
