refactor business flow in project edit/detail

--- a/src/app/main/editor/project-detail/project-detail.component.html
+++ b/src/app/main/editor/project-detail/project-detail.component.html
@@ -1,3 +1,13 @@
 <p>
   project works!
 </p>
+
+
+
+<ul>
+	<li *ngFor="let file of files">
+		{{file.id}}
+	</li>
+</ul>
+
+<button [routerLink]="'edit'">Edit this project</button>
