--- a/src/app/main/editor/project-list/project-list.component.html
+++ b/src/app/main/editor/project-list/project-list.component.html
@@ -2,12 +2,12 @@
 <article>
 	<h2>My projects</h2>
 	<ul class="flex-container">
-		<li *ngFor="let project of projects" class="project-preview" [routerLink]="[project.id, 'edit']">
+		<li *ngFor="let project of projects" class="project-preview" [routerLink]="project.id">
 			{{project.name}} 
 			<br>
 			{{project.description}}
 		</li>
-		<li class="project-preview" (click)="toggleCreateProjectForm(true)">
+		<li class="project-preview" [routerLink]="0">
 			Create new project + 
 		</li>
 	</ul>
