style lemon logo

--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,6 +1,12 @@
 <nav>
 	<a class="nav-brand" [routerLink]="['/home']">
-		Lemon Pie
+		<div class="logo">
+			<div class="lemon-petal"></div>
+			<div class="lemon-petal"></div>
+			<div class="lemon-petal"></div>
+			<div class="lemon-petal"></div>
+			<div class="lemon-petal"></div>
+		</div>
 	</a>
 	<ul class="nav-menu">
 		<!-- <li [routerLink]="['/home']" class="nav-item">
