--- a/src/assets/scss/components/_logo.scss
+++ b/src/assets/scss/components/_logo.scss
@@ -1,7 +1,7 @@
 // LEMOINPIE LOGO
 
 $lemonLogoSize: 100px;// pixels
-.lemon-outter {
+.logo {
     height: $lemonLogoSize;
     width: $lemonLogoSize;
     background-color: #aeb10b;
