--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="display-center">
 	<h1>Lemon Pie</h1>
-	<div class="lemon-outter">
+	<div class="logo">
 		<div class="lemon-petal"></div>
 		<div class="lemon-petal"></div>
 		<div class="lemon-petal"></div>
