--- a/src/assets/scss/layout/_menu.scss
+++ b/src/assets/scss/layout/_menu.scss
@@ -12,7 +12,10 @@ nav {
     align-items: center;
 
     .nav-brand {
-        text-transform: uppercase;       
+		.logo {
+			transform: scale(0.4);
+			display: inline-flex;     
+		}
     }
     .nav-menu {
         display: flex;
@@ -27,12 +30,28 @@ nav {
     position: absolute;
     top: 50px;
     right: 30px;
-    border: 1px solid;
-    background-color: white;
-    padding: 20px;
+    border: 1px solid $gallery;
+	background-color: $theme-background;
     
     opacity: 0;
-    pointer-events: none;
+	pointer-events: none;
+	
+	li {
+		margin: 10px;
+		padding: 0.3em 1.1em;
+		
+		a {
+			text-decoration: none;
+			color: $theme-text;
+			display: block;
+			
+			&:hover{
+				color: $theme-accent;
+			}
+		}
+	}
+
+
     &.visible {
         opacity: 1;
         pointer-events: all;
