styling project preview action buttons

--- a/src/app/main/editor/project-list/project-list.component.html
+++ b/src/app/main/editor/project-list/project-list.component.html
@@ -5,6 +5,8 @@
 		<div *ngFor="let project of projects" class="project-preview-container">			
 			<div class="project-preview" 
 				style="background-image: url('https://www.jobbnorge.no/search/img/no-hits.png')">
+			</div>
+			<div class="project-actions">
 				<a href="#" class="transparent-btn" [routerLink]="project.id">View Project</a>			
 			</div>
 			<div class="project-description">
