--- a/src/assets/scss/pages/_project-list.scss
+++ b/src/assets/scss/pages/_project-list.scss
@@ -20,6 +20,7 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 
 	display: flex;
 	flex-direction: column;
+	position: relative;
 
 	.project-preview {
 		border: 1px $gallery solid;
@@ -39,9 +40,22 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 		transition: filter $transition-delay $transition-easing;
 	}
 
+	.project-actions {
+		position: absolute;
+		top:0;
+		left: 0;
+		bottom: 3em;
+		right: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		opacity: 0;
+		transition: opacity $transition-delay $transition-easing;
+	}
+
 	.project-description {
 		padding: 5px; 
-
 		min-height: 3em;
 		background-color: $theme-background;
 		border: 1px $gallery solid;
@@ -59,6 +73,9 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 		.project-preview {	
 			filter: brightness(60%);
 		}		
+		.project-actions {
+			opacity: 1;
+		}
 		
 	}
 
