styling project preview in project list page

--- a/src/app/main/editor/project-list/project-list.component.html
+++ b/src/app/main/editor/project-list/project-list.component.html
@@ -10,9 +10,9 @@
 				<a href="#" class="transparent-btn" [routerLink]="project.id">View Project</a>			
 			</div>
 			<div class="project-description">
-				{{project.name}} 
+				<label>{{project.name}}</label> 
 				<br>
-				{{project.description}}
+				<p>{{project.description}}</p>
 			</div>
 			
 		</div>
