--- a/src/assets/scss/pages/_project-list.scss
+++ b/src/assets/scss/pages/_project-list.scss
@@ -61,6 +61,15 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 		border: 1px $gallery solid;
 		border-bottom-left-radius: 4px;
 		border-bottom-right-radius: 4px;
+
+		text-overflow: ellipsis;
+
+		label {
+			// TODO: set max dimentions and text style			
+		}
+		p {
+			// TODO: set max dimentions and text style
+		}
 	}
 
 	transition: box-shadow $transition-delay $transition-easing;
