style project list page

--- a/src/app/main/editor/project-list/project-list.component.html
+++ b/src/app/main/editor/project-list/project-list.component.html
@@ -1,6 +1,6 @@
 
 <article>
-	<h2>My projects</h2>
+	<h2 class="page-header">My Active Projects</h2>
 	<div class="flex-container">
 		<div *ngFor="let project of projects" class="project-preview-container">			
 			<div class="project-preview" 
