--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@
 @import './assets/scss/layout/_grid';
 @import './assets/scss/layout/_header';
 @import './assets/scss/layout/_footer';
+@import './assets/scss/layout/_item-gallery';
 @import './assets/scss/layout/_menu';
 @import './assets/scss/layout/_tables';
 @import './assets/scss/layout/_zindex';
