--- a/src/assets/scss/layout/_item-gallery.scss
+++ b/src/assets/scss/layout/_item-gallery.scss
@@ -23,13 +23,18 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 	position: relative;
 
 	.item-preview {
+		position: absolute;
+		top:0;
+		left: 0;
+		bottom: 4em;
+		right: 0;
+
 		border: 1px $gallery solid;
 		border-bottom: none;
 		border-top-left-radius: 4px;
 		border-top-right-radius: 4px;
 
 		background-color: $gallery;
-		height: calc(200px - 3em);
 		background-position: center;
 		background-size: cover;
 
@@ -44,7 +49,7 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 		position: absolute;
 		top:0;
 		left: 0;
-		bottom: 3em;
+		bottom: 4em;
 		right: 0;
 		display: flex;
 		justify-content: center;
@@ -55,8 +60,13 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 	}
 
 	.item-description {
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		right: 0;
+
 		padding: 10px; 
-		min-height: 3em;
+		height: 3em;
 		background-color: $theme-background;
 		border: 1px $gallery solid;
 		border-bottom-left-radius: 4px;
