--- a/src/app/shared/components/file-uploader/file-uploader.component.html
+++ b/src/app/shared/components/file-uploader/file-uploader.component.html
@@ -8,5 +8,5 @@
 </div>
 
 <div *ngFor="let file of files">
-	<app-upload-task [file]="file" [uploadPath]="'blah'"></app-upload-task>
+	<app-upload-task [file]="file" [uploadPath]="uploadPath"></app-upload-task>
 </div>
