--- a/src/app/main/editor/project-detail/project-detail.component.html
+++ b/src/app/main/editor/project-detail/project-detail.component.html
@@ -31,4 +31,4 @@
 	</div>
 </div>
 
-<app-file-uploader [promptText]="'Upload more files'"></app-file-uploader>
+<app-file-uploader [promptText]="'Upload more files'" [uploadPath]="project.id"></app-file-uploader>
