--- a/src/app/main/editor/project-edit/project-edit.component.html
+++ b/src/app/main/editor/project-edit/project-edit.component.html
@@ -1,3 +1,14 @@
 <p>
   project-edit works!
 </p>
+
+
+<button type="button" (click)="logFromStorage()">logFromStorage</button> 
+<button type="button" (click)="setInStorage()">setInStorage</button> 
+
+<br> 
+
+<canvas #editor>
+
+
+</canvas>
