--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@
 @import './assets/scss/components/_dropdown';
 @import './assets/scss/components/_forms';
 @import './assets/scss/components/_file-uploader';
+@import './assets/scss/components/_editor';
 @import './assets/scss/components/_logo';
 @import './assets/scss/components/_modal';
 
