visually select area on canvas

--- a/src/app/shared/components/editor/editor.component.html
+++ b/src/app/shared/components/editor/editor.component.html
@@ -1,1 +1,5 @@
-<canvas #canvas></canvas>
+
+<div class="canvas-container">
+	<img class="canvas-background" #canvasBg>
+	<canvas #canvas></canvas>
+</div>
