--- a/src/assets/scss/components/_editor.scss
+++ b/src/assets/scss/components/_editor.scss
@@ -1,3 +1,24 @@
-canvas {
-	border: 1px solid $mercury;
+
+
+.canvas-container {
+	position: relative;
+
+	.canvas-background {
+		position: absolute;
+		top: 0;
+		left: 0;
+	
+		pointer-events: none;
+	}
+
+	canvas {
+		position: absolute;
+		top: 0;
+		left: 0;
+	
+
+		border: 1px solid $mercury;
+	}
 }
+
+
