minor changes and comments

--- a/src/app/shared/components/editor/editor.component.html
+++ b/src/app/shared/components/editor/editor.component.html
@@ -1,4 +1,7 @@
 
+<app-selection-menu></app-selection-menu>
+<br>
+
 <div class="canvas-container">
 	<img class="canvas-background" #canvasBg>
 	<canvas #canvas></canvas>
