--- a/src/app/shared/components/add-project/add-project.component.html
+++ b/src/app/shared/components/add-project/add-project.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
 	<div class="x-btn" (click)="close()">
-		<i class="fa fa-close"></i>
+		<i class="fa fa-times"></i>
 	</div>
 
 	<h4>Create new project</h4>
