--- a/src/app/shared/components/editor/editor.component.html
+++ b/src/app/shared/components/editor/editor.component.html
@@ -1,5 +1,5 @@
 
-<app-selection-menu></app-selection-menu>
+<app-selection-menu (saveLink)="saveLink($event)"></app-selection-menu>
 <br>
 
 <div class="canvas-container">
