style selection menu component

--- a/src/app/shared/components/editor/editor.component.html
+++ b/src/app/shared/components/editor/editor.component.html
@@ -5,4 +5,5 @@
 <div class="canvas-container">
 	<img class="canvas-background" #canvasBg>
 	<canvas #canvas></canvas>
+	<!-- <ng-container *ngIf="showSelectionMenu"></ng-container> -->
 </div>
