--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,3 @@
 // Sass Variables (except the color variables)
 
-// Example
-$positions: top, right, bottom, left;
-$zindex: 2147483647;
+$border-width: 2px;
