--- a/src/assets/scss/components/_file-uploader.scss
+++ b/src/assets/scss/components/_file-uploader.scss
@@ -14,7 +14,7 @@
 	margin: 10px 0;
   
 	&.hovering {
-		border: 2px solid #f16624;
+		border: $border-width solid #f16624;
 		color: #dadada !important;
 	}
   
