--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -1,5 +1,53 @@
 // Forms and form inputs styling
 
+.form {
+	display: flex;
+	flex-direction: column;
+	color: $theme-text;
+
+	.form-group {
+		label {
+			display: block;
+			margin-bottom: 0.3em;
+		}
+		input, 
+		select { 
+			display: block;
+			margin-bottom: 0.3em;
+			padding: 10px;
+			margin-bottom: 0.3em;
+			line-height: 1.2em;
+		}
+		.select {
+			border-radius: 0 !important;
+			border: 1px solid $mercury;
+		}
+		
+	}
+
+	button[type="submit"] {
+	   background-color: $btn-submit;
+	   color: $theme-background;
+	   margin-top: 0.4em;
+    }
+	
+}
+
+.form-container {
+	padding: 20px;
+	// margin: 30px;
+	border: 1px $gallery solid;
+	position: relative;
+	.x-btn {
+		position: absolute;
+		top: -15px;
+    	right: -15px;
+    	background-color: $white;
+	}
+}
+
+
+
 .login-form {
 	margin-top: 10vh;
     display: flex;
@@ -38,16 +86,3 @@
     max-height: 200px;
 }
 
-.form-container {
-	padding: 20px;
-	margin: 30px;
-	border: 1px $gallery solid;
-
-	position: relative;
-	.x-btn {
-		position: absolute;
-		top: -15px;
-    	right: -15px;
-    	background-color: $white;
-	}
-}
