--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 @import './assets/scss/base/_base'; 
 @import './assets/scss/base/_reset'; 
 @import './assets/scss/base/_typography';
+@import './assets/scss/base/_zindex';
 
 // Layout
 @import './assets/scss/layout/_grid';
@@ -30,6 +31,7 @@
 @import './assets/scss/components/_forms';
 @import './assets/scss/components/_file-uploader';
 @import './assets/scss/components/_editor';
+@import './assets/scss/components/_selection-menu';
 @import './assets/scss/components/_logo';
 @import './assets/scss/components/_modal';
 
