--- a/src/app/shared/components/selection-menu/selection-menu.component.html
+++ b/src/app/shared/components/selection-menu/selection-menu.component.html
@@ -1,5 +1,5 @@
 <div class="selection-menu-container form-container">
-	<button type="button" class="x-btn">
+	<button type="button" (click)="close()" class="x-btn">
 		<i class="fa fa-times"></i>
 	</button>
 
