save clickable area link to a file in firebase

--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -1,4 +1,4 @@
 <br>
 <br>
 
-<app-editor [imgUrl]="file.downloadURL"></app-editor>
+<app-editor [imgUrl]="file.downloadURL" (saveArea)="saveArea($event)"></app-editor>
